added header and styles

--- a/index.html
+++ b/index.html
@@ -4,14 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids School</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/3a6332738d.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://fontawesome.com/v5/icons/bars?f=classic&s=solid">
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="quicksand">
     <header>
+        <nav class="navbar">
+            <div class="nav1">
+                <img class="nav-img" src="assets/logo.png" alt="">
+                <h2 class="title dark1">SCHOOL</h2>
+            </div>
+            <div class="nav2">
+                <ul>
+                    <li id="li-1"><a href="">Home</a></li>
+                    <li id="li-2"><a href="">About</a></li>
+                    <li id="li-3"><a href="">Facilities</a></li>
+                    <li id="li-4"><a href="">Admission</a></li>
+                </ul>
+            </div>
+                <button class="button hover dark5">Contact</button>
+             <button class="hamburger"><i class="fas fa-bars"></i></button> 
+                </nav>
+                <div class="underline"></div>
+        <br>
 
+        <marquee class="marquee" behavior="" direction=""> Our admission is going on || Education is not preparation for life; education is life itself</marquee>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title"><span class="t1">Empowering</span>
+                  <span class="dark1"> students from small age </span> <span class="t2">towards vision</span></h1>
+                <p class="banner-description dark1">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                <button class="banner-btn dark5">Enroll Now</button>
+            </div>
+            <div> <img src="assets/hero-kids.png" alt="" class="banner-img"></div>
+           
+        </div>
     </header>
     <main>
-
+        <section class="section-1">
+            <h2 class="section1-title">Standard Curriculum</h2>
+            <div class="section-container"></div>
+        </section>
     </main>
     <footer>
         
